# scratch

./: .gitignore  README.md
macrotest/: .gitignore  CMakeLists.txt  macrotest.sln  macrotest.vs2013.sln  main.cpp
macrotest/macro_test/: console_display.cpp  console_display.h  macro_test.cpp  macro_test.vcxproj  macro_test.vcxproj.filters  macro_test.vs2013.vcxproj  macro_test.vs2013.vcxproj.filters  mcs_logger.cpp  mcs_logger.h  test_method_base.cpp  test_method_base.h
